aspectwerkz3/src/main/org/codehaus/aspectwerkz/expression/ast/ExpressionParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. ExpressionParser.java */

/**************************************************************************************
 * Copyright (c) Jonas Bonér, Alexandre Vasseur. All rights reserved.                 *
 * http://aspectwerkz.codehaus.org                                                    *
 * ---------------------------------------------------------------------------------- *
 * The software in this package is published under the terms of the LGPL license      *
 * a copy of which has been included with this distribution in the license.txt file.  *
 **************************************************************************************/
package org.codehaus.aspectwerkz.expression.ast;

import java.io.Reader;
import java.io.StringReader;

import java.lang.reflect.Modifier;

/**
 * Usage:
 * <pre>
 *     ExpressionParser parser = new ExpressionParser(System.in); // can be only one
 *     ASTRoot root = parser.parse("call(@RequiresNew public * foo.Bar.*(String, ..) AND withincode(*
 * foo.Baz.within(..)");
 *     Expression expression = new Expression(root);
 *     ...
 *  </pre>
 *
 * @author <a href="mailto:jboner@codehaus.org">Jonas Bonér</a>
 */
public class ExpressionParser /*@bgen(jjtree)*/
    implements ExpressionParserTreeConstants, ExpressionParserConstants
{ /*@bgen(jjtree)*/

    protected static JJTExpressionParserState jjtree = new JJTExpressionParserState();
    static private boolean jj_initialized_once = false;
    static public ExpressionParserTokenManager token_source;
    static SimpleCharStream jj_input_stream;
    static public Token token;
    static public Token jj_nt;
    static private int jj_ntk;
    static private Token jj_scanpos;
    static private Token jj_lastpos;
    static private int jj_la;
    static public boolean lookingAhead = false;
    static private boolean jj_semLA;
    static private int jj_gen;
    static final private int[] jj_la1 = new int[22];
    static private int[] jj_la1_0;
    static private int[] jj_la1_1;
    static private int[] jj_la1_2;

    static
    {
        jj_la1_0();
        jj_la1_1();
        jj_la1_2();
    }

    static final private JJCalls[] jj_2_rtns = new JJCalls[15];
    static private boolean jj_rescan = false;
    static private int jj_gc = 0;
    static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    static private java.util.Vector jj_expentries = new java.util.Vector();
    static private int[] jj_expentry;
    static private int jj_kind = -1;
    static private int[] jj_lasttokens = new int[100];
    static private int jj_endpos;

    public ExpressionParser(java.io.InputStream stream)
    {
        if (jj_initialized_once)
        {
            System.out.println(
                "ERROR: Second call to constructor of static parser.  You must");
            System.out.println(
                "       either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }

        jj_initialized_once = true;
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new ExpressionParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;

        for (int i = 0; i < 22; i++)
        {
            jj_la1[i] = -1;
        }

        for (int i = 0; i < jj_2_rtns.length; i++)
        {
            jj_2_rtns[i] = new JJCalls();
        }
    }

    public ExpressionParser(java.io.Reader stream)
    {
        if (jj_initialized_once)
        {
            System.out.println(
                "ERROR: Second call to constructor of static parser.  You must");
            System.out.println(
                "       either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }

        jj_initialized_once = true;
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new ExpressionParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;

        for (int i = 0; i < 22; i++)
        {
            jj_la1[i] = -1;
        }

        for (int i = 0; i < jj_2_rtns.length; i++)
        {
            jj_2_rtns[i] = new JJCalls();
        }
    }

    public ExpressionParser(ExpressionParserTokenManager tm)
    {
        if (jj_initialized_once)
        {
            System.out.println(
                "ERROR: Second call to constructor of static parser.  You must");
            System.out.println(
                "       either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }

        jj_initialized_once = true;
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;

        for (int i = 0; i < 22; i++)
        {
            jj_la1[i] = -1;
        }

        for (int i = 0; i < jj_2_rtns.length; i++)
        {
            jj_2_rtns[i] = new JJCalls();
        }
    }

    public ASTRoot parse(String expression)
        throws ParseException
    {
        return parse(new StringReader(expression));
    }

    public ASTRoot parse(Reader reader)
        throws ParseException
    {
        ReInit(reader);

        return Root();
    }

    //------------------ Bootstrap ------------------

    /**
     * Entry point.
     */
    static final public ASTRoot Root()
        throws ParseException
    {
        /*@bgen(jjtree) Root */
        ASTRoot jjtn000 = new ASTRoot(JJTROOT);
        boolean jjtc000 = true;

        jjtree.openNodeScope(jjtn000);

        try
        {
            Expression();
            jj_consume_token(0);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;

            if (true)
            {
                return jjtn000;
            }
        }
        catch (Throwable jjte000)
        {
            if (jjtc000)
            {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else
            {
                jjtree.popNode();
            }

            if (jjte000 instanceof RuntimeException)
            {
                if (true)
                {
                    throw (RuntimeException) jjte000;
                }
            }

            if (jjte000 instanceof ParseException)
            {
                if (true)
                {
                    throw (ParseException) jjte000;
                }
            }

            if (true)
            {
                throw (Error) jjte000;
            }
        }
        finally
        {
            if (jjtc000)
            {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }

        throw new Error("Missing return statement in function");
    }

    /**
     * Expression.
     */
    static final public void Expression()
        throws ParseException
    {
        AndExpression();
    }

    //------------------ Logical operators ------------------

    /**
     * AndExpression.
     */
    static final public void AndExpression()
        throws ParseException
    {
        ASTAnd jjtn001 = new ASTAnd(JJTAND);
        boolean jjtc001 = true;

        jjtree.openNodeScope(jjtn001);

        try
        {
            OrExpression();
label_1: 
            while (true)
            {
                if (jj_2_1(2))
                {
                    ;
                }
                else
                {
                    break label_1;
                }

                jj_consume_token(AND);
                OrExpression();
            }
        }
        catch (Throwable jjte001)
        {
            if (jjtc001)
            {
                jjtree.clearNodeScope(jjtn001);
                jjtc001 = false;
            }
            else
            {
                jjtree.popNode();
            }

            if (jjte001 instanceof RuntimeException)
            {
                if (true)
                {
                    throw (RuntimeException) jjte001;
                }
            }

            if (jjte001 instanceof ParseException)
            {
                if (true)
                {
                    throw (ParseException) jjte001;
                }
            }

            if (true)
            {
                throw (Error) jjte001;
            }
        }
        finally
        {
            if (jjtc001)
            {
                jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
            }
        }
    }

    /**
     * OrExpression.
     */
    static final public void OrExpression()
        throws ParseException
    {
        ASTOr jjtn001 = new ASTOr(JJTOR);
        boolean jjtc001 = true;

        jjtree.openNodeScope(jjtn001);

        try
        {
            UnaryExpression();
label_2: 
            while (true)
            {
                if (jj_2_2(2))
                {
                    ;
                }
                else
                {
                    break label_2;
                }

                jj_consume_token(OR);
                AndExpression();
            }
        }
        catch (Throwable jjte001)
        {
            if (jjtc001)
            {
                jjtree.clearNodeScope(jjtn001);
                jjtc001 = false;
            }
            else
            {
                jjtree.popNode();
            }

            if (jjte001 instanceof RuntimeException)
            {
                if (true)
                {
                    throw (RuntimeException) jjte001;
                }
            }

            if (jjte001 instanceof ParseException)
            {
                if (true)
                {
                    throw (ParseException) jjte001;
                }
            }

            if (true)
            {
                throw (Error) jjte001;
            }
        }
        finally
        {
            if (jjtc001)
            {
                jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
            }
        }
    }

    /**
     * UnaryExpression.
     */
    static final public void UnaryExpression()
        throws ParseException
    {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
        case NOT:
            NotExpression();

            break;

        case 80:
            jj_consume_token(80);
            Expression();
            jj_consume_token(81);

            break;

        case POINTCUT_REFERENCE:
        case EXECUTION:
        case CALL:
        case SET:
        case GET:
        case HANDLER:
        case WITHIN:
        case WITHIN_CODE:
        case STATIC_INITIALIZATION:
        case CFLOW:
        case CFLOW_BELOW:
            Pointcut();

            break;

        default:
            jj_la1[0] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    /**
     * NotExpression.
     */
    static final public void NotExpression()
        throws ParseException
    {
        jj_consume_token(NOT);

        ASTNot jjtn001 = new ASTNot(JJTNOT);
        boolean jjtc001 = true;

        jjtree.openNodeScope(jjtn001);

        try
        {
            UnaryExpression();
        }
        catch (Throwable jjte001)
        {
            if (jjtc001)
            {
                jjtree.clearNodeScope(jjtn001);
                jjtc001 = false;
            }
            else
            {
                jjtree.popNode();
            }

            if (jjte001 instanceof RuntimeException)
            {
                if (true)
                {
                    throw (RuntimeException) jjte001;
                }
            }

            if (jjte001 instanceof ParseException)
            {
                if (true)
                {
                    throw (ParseException) jjte001;
                }
            }

            if (true)
            {
                throw (Error) jjte001;
            }
        }
        finally
        {
            if (jjtc001)
            {
                jjtree.closeNodeScope(jjtn001, true);
            }
        }
    }

    //------------------ Pointcuts ------------------

    /**
     * Pointcut.
     */
    static final public void Pointcut()
        throws ParseException
    {
        if (jj_2_3(4))
        {
            PointcutReference();
        }
        else if (jj_2_4(4))
        {
            Call();
        }
        else if (jj_2_5(4))
        {
            Execution();
        }
        else if (jj_2_6(4))
        {
            Set();
        }
        else if (jj_2_7(4))
        {
            Get();
        }
        else if (jj_2_8(4))
        {
            Handler();
        }
        else if (jj_2_9(4))
        {
            Within();
        }
        else if (jj_2_10(4))
        {
            WithinCode();
        }
        else if (jj_2_11(4))
        {
            StaticInitialization();
        }
        else if (jj_2_12(4))
        {
            Cflow();
        }
        else if (jj_2_13(4))
        {
            CflowBelow();
        }
        else
        {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    /**
     * Pointcut reference.
     */
    static final public void PointcutReference()
        throws ParseException
    {
        /*@bgen(jjtree) PointcutReference */
        ASTPointcutReference jjtn000 = new ASTPointcutReference(JJTPOINTCUTREFERENCE);
        boolean jjtc000 = true;

        jjtree.openNodeScope(jjtn000);

        Token name;

        try
        {
            name = jj_consume_token(POINTCUT_REFERENCE);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setName(name.image);
        }
        finally
        {
            if (jjtc000)
            {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /**
     * Execution.
     */
    static final public void Execution()
        throws ParseException
    {
        /*@bgen(jjtree) Execution */
        ASTExecution jjtn000 = new ASTExecution(JJTEXECUTION);
        boolean jjtc000 = true;

        jjtree.openNodeScope(jjtn000);

        try
        {
            jj_consume_token(EXECUTION);

            if (jj_2_14(2))
            {
                MethodPattern();
            }
            else
            {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                {
                case METHOD_PUBLIC:
                case METHOD_PROTECTED:
                case METHOD_PRIVATE:
                case METHOD_SYNCHRONIZED:
                case METHOD_ATTRIBUTE:
                case METHOD_CLASS_PATTERN:
                    ConstructorPattern();

                    break;

                default:
                    jj_la1[1] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
            }

            jj_consume_token(81);
        }
        catch (Throwable jjte000)
        {
            if (jjtc000)
            {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else
            {
                jjtree.popNode();
            }

            if (jjte000 instanceof RuntimeException)
            {
                if (true)
                {
                    throw (RuntimeException) jjte000;
                }
            }

            if (jjte000 instanceof ParseException)
            {
                if (true)
                {
                    throw (ParseException) jjte000;
                }
            }

            if (true)
            {
                throw (Error) jjte000;
            }
        }
        finally
        {
            if (jjtc000)
            {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /**
     * Call.
     */
    static final public void Call()
        throws ParseException
    {
        /*@bgen(jjtree) Call */
        ASTCall jjtn000 = new ASTCall(JJTCALL);
        boolean jjtc000 = true;

        jjtree.openNodeScope(jjtn000);

        try
        {
            jj_consume_token(CALL);

            if (jj_2_15(2))
            {
                MethodPattern();
            }
            else
            {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                {
                case METHOD_PUBLIC:
                case METHOD_PROTECTED:
                case METHOD_PRIVATE:
                case METHOD_SYNCHRONIZED:
                case METHOD_ATTRIBUTE:
                case METHOD_CLASS_PATTERN:
                    ConstructorPattern();

                    break;

                default:
                    jj_la1[2] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
            }

            jj_consume_token(81);
        }
        catch (Throwable jjte000)
        {
            if (jjtc000)
            {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else
            {
                jjtree.popNode();
            }

            if (jjte000 instanceof RuntimeException)
            {
                if (true)
                {
                    throw (RuntimeException) jjte000;
                }
            }

            if (jjte000 instanceof ParseException)
            {
                if (true)
                {
                    throw (ParseException) jjte000;
                }
            }

            if (true)
            {
                throw (Error) jjte000;
            }
        }
        finally
        {
            if (jjtc000)
            {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /**
     * Set.
     */
    static final public void Set()
        throws ParseException
    {
        /*@bgen(jjtree) Set */
        ASTSet jjtn000 = new ASTSet(JJTSET);
        boolean jjtc000 = true;

        jjtree.openNodeScope(jjtn000);

        try
        {
            jj_consume_token(SET);
            FieldPattern();
            jj_consume_token(FIELD_POINTCUT_END);
        }
        catch (Throwable jjte000)
        {
            if (jjtc000)
            {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else
            {
                jjtree.popNode();
            }

            if (jjte000 instanceof RuntimeException)
            {
                if (true)
                {
                    throw (RuntimeException) jjte000;
                }
            }

            if (jjte000 instanceof ParseException)
            {
                if (true)
                {
                    throw (ParseException) jjte000;
                }
            }

            if (true)
            {
                throw (Error) jjte000;
            }
        }
        finally
        {
            if (jjtc000)
            {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    /**
     * Get.
     */
    static final public void Get()
        throws ParseException
    {
        /*@bgen(jjtree) Get */
        ASTGet jjtn000 = new ASTGet(JJTGET);
        boolean jjtc000 = true;

        jjtree.openNodeScope(jjtn000);

        try
        {
            jj_consume_token(GET);
            FieldPattern();
            jj_consume_token(FIELD_POINTCUT_END);
        }
        catch (Throwable jjte000)
        {
            if (jjtc000)
            {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else
            {
                jjtree.popNode();
            }

            if (jjte000 instanceof RuntimeException)
            {
                if (true)
                {
                    throw (RuntimeException) jjte000;
                }
            }

            if (jjte000 instanceof ParseException)
            {
                if (true)
                {
                    throw (ParseException) jjte000;
                }
            }

            if (true)
            {
                throw (Error) jjte000;
            }
        }
        finally
        {
            if (jjtc000)
            {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
